# 2024Oss-Team-Project---Taylor-series

./: .gitignore  LICENSE  README.md  README.rst  Taylor_Series-graph_diff.py  Taylor_Seriesgraph_diff.py  class.py  last.py  lumache.py  main.py  pyproject.toml  taylor-seriesgap.py  taylor_seires.py  taylor_series.py  taylorseriesgap.py
Taylor_series.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: requirements.txt
docs/source/: Codes.rst  Libraries.rst  conf.py  index.rst  usage.rst  코드 보기.rst
taylor-series-expansion/: README.md  taylor_series.py
